--- a/source/index.html
+++ b/source/index.html
@@ -9,12 +9,10 @@
     <link rel="preload" href="./fonts/Montserrat-Bold.woff2" type="font/woff2" as="font" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" href="/favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/nouislider/distribute/nouislider.min.css">
-    <script src="scripts/index.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/nouislider/distribute/nouislider.min.js"></script>
-    <script src="scripts/range-slider.js"></script>
   </head>
   <body class="page__body">
     <header class="header">
@@ -92,7 +90,7 @@
               </picture>
               <div class="slider__content-box">
                 <h2 class="slider__title">Декаф Флэт Уайт</h2>
-                <p class="slider__label label">Новинка!</p>
+                <p class="slider__subtitle subtitle">Новинка!</p>
                 <p class="slider__description">Свежесваренный кофе без кофеина из Эфиопии с натуральным фермерским молоком — то, что нужно для расслабления после тяжёлого рабочего дня</p>
                 <div class="slider__price">
                   <span class="slider__price-old">295₽</span>
@@ -103,16 +101,16 @@
             </li>
             <li class="slider__item">
               <picture class="slider__picture">
-                <source type="image/webp" media="(min-width: 1440px)" srcset="/images/slider_lavender_desktop@1x.wep 1x, images/slider_lavender_desktop@2x.webp 2x" width="280" height="280">
-                <source type="image/webp" media="(min-width: 768px)" srcset="images/slider_lavender_tablet@1x.webp 1x, images/slider_lavender_tablet@2x.webp 2x" width="280" height="280">
-                <source type="image/webp" srcset="./images/slider_lavender_mobile@1x.webp 1x, images/slider_lavender_mobile@2x.webp 2x" width="280" height="280">
-                <source type="image/png" media="(min-width: 1440px)" srcset="images/slider_lavender_desktop@1x.png 1x, images/slider_lavender_desktop@2x.png 2x" width="280" height="280">
-                <source type="image/png" media="(min-width: 768px)" srcset="images/slider_lavender_tablet@1x.png 1x, images/slider_lavender_tablet@2x.png 2x" width="280" height="280">
-                <img class="slider__img" src="/images/slider_lavender_mobile@1x.png" srcset="images/slider_lavender_mobile@2x.png 2x" width="280" height="280" alt="Банка кофе">
+                <source type="image/webp" media="(min-width: 1440px)" srcset="/images/slider_lavender_desktop@1x.wep 1x, /images/slider_lavender_desktop@2x.webp 2x" width="280" height="280">
+                <source type="image/webp" media="(min-width: 768px)" srcset="/images/slider_lavender_tablet@1x.webp 1x, /images/slider_lavender_tablet@2x.webp 2x" width="280" height="280">
+                <source type="image/webp" srcset="/images/slider_lavender_mobile@1x.webp 1x, /images/slider_lavender_mobile@2x.webp 2x" width="280" height="280">
+                <source type="image/png" media="(min-width: 1440px)" srcset="/images/slider_lavender_desktop@1x.png 1x, /images/slider_lavender_desktop@2x.png 2x" width="280" height="280">
+                <source type="image/png" media="(min-width: 768px)" srcset="/images/slider_lavender_tablet@1x.png 1x, /images/slider_lavender_tablet@2x.png 2x" width="280" height="280">
+                <img class="slider__img" src="/images/slider_lavender_mobile@1x.png" srcset="/images/slider_lavender_mobile@2x.png 2x" width="280" height="280" alt="Банка кофе">
               </picture>
               <div class="slider__content-box">
                 <h2 class="slider__title">Лавандовый Латте</h2>
-                <p class="slider__label label">Новинка!</p>
+                <p class="slider__subtitle subtitle">Новинка!</p>
                 <p class="slider__description">Невероятное сочетание перуанской высокогорной арабики с молоком ламы и лавандовым сиропом унесёт вас прямо на вершину Радужных гор</p>
                 <div class="slider__price">
                   <span class="slider__price-old">285₽</span>
@@ -123,16 +121,16 @@
             </li>
             <li class="slider__item">
               <picture class="slider__picture">
-                <source type="image/webp" media="(min-width: 1440px)" srcset="images/slider_espresso_desktop@1x.wep 1x, images/slider_espresso_desktop@2x.webp 2x" width="280" height="280">
-                <source type="image/webp" media="(min-width: 768px)" srcset="images/slider_espresso_tablet@1x.webp 1x, images/slider_espresso_tablet@2x.webp 2x" width="280" height="280">
-                <source type="image/webp" srcset="images/slider_espresso_mobile@1x.webp 1x, images/slider_espresso_mobile@2x.webp 2x" width="280" height="280">
-                <source type="image/png" media="(min-width: 1440px)" srcset="images/slider_espresso_desktop@1x.png 1x, images/slider_espresso_desktop@2x.png 2x" width="280" height="280">
-                <source type="image/png" media="(min-width: 768px)" srcset="images/slider_espresso_tablet@1x.png 1x, images/slider_espresso_tablet@2x.png 2x" width="280" height="280">
-                <img class="slider__img" src="images/slider_espresso_mobile@1x.png" srcset="images/slider_espresso_mobile@2x.png 2x" width="280" height="280" alt="Банка кофе">
+                <source type="image/webp" media="(min-width: 1440px)" srcset="/images/slider_espresso_desktop@1x.wep 1x, /images/slider_espresso_desktop@2x.webp 2x" width="280" height="280">
+                <source type="image/webp" media="(min-width: 768px)" srcset="/images/slider_espresso_tablet@1x.webp 1x, /images/slider_espresso_tablet@2x.webp 2x" width="280" height="280">
+                <source type="image/webp" srcset="/images/slider_espresso_mobile@1x.webp 1x, /images/slider_espresso_mobile@2x.webp 2x" width="280" height="280">
+                <source type="image/png" media="(min-width: 1440px)" srcset="/images/slider_espresso_desktop@1x.png 1x, /images/slider_espresso_desktop@2x.png 2x" width="280" height="280">
+                <source type="image/png" media="(min-width: 768px)" srcset="/images/slider_espresso_tablet@1x.png 1x, /images/slider_espresso_tablet@2x.png 2x" width="280" height="280">
+                <img class="slider__img" src="/images/slider_espresso_mobile@1x.png" srcset="/images/slider_espresso_mobile@2x.png 2x" width="280" height="280" alt="Банка кофе">
               </picture>
               <div class="slider__content-box">
-                <p class="slider__label label">Новинка!</p>
                 <h2 class="slider__title">Декаф Флэт Уайт</h2>
+                <p class="slider__subtitle subtitle">Новинка!</p>
                 <p class="slider__description">Свежесваренный кофе без кофеина из Эфиопии с натуральным фермерским молоком — то, что нужно для расслабления после тяжёлого рабочего дня</p>
                 <div class="slider__price">
                   <span class="slider__price-old">295₽</span>
@@ -159,7 +157,7 @@
         <div class="container">
           <div class="features__wrapper">
             <h2 class="features__title">Главные причины выбрать Drink2Go</h2>
-            <p class="features__label label">Преимущества</p>
+            <p class="features__subtitle subtitle">Преимущества</p>
             <ul class="features__list">
               <li class="features__item features__item--speed">
                 <p class="features__item-title">Скорость</p>
@@ -185,7 +183,7 @@
         <div class="container">
           <div class="catalog__wrapper">
             <h2 class="catalog__title">Каталог кофейных напитков</h2>
-            <p class="catalog__subtitle label">Каталог</p>
+            <p class="catalog__subtitle subtitle">Каталог</p>
             <div class="catalog__products">
               <form class="catalog__form" action="⦁	https://echo.htmlacademy.ru" method="get">
                 <fieldset class="catalog__filter-group">
@@ -240,32 +238,32 @@
                   <legend class="catalog__filter-name">Страна произрастания</legend>
                   <div class="catalog__filter-box country-filter">
                     <label>
-                      <input class="country-filter__input" type="checkbox" name="Brazil" value="Brazil">
+                      <input class="country-filter__input" type="checkbox" name="country[]" value="Brazil">
                       <span class="custom-checkbox"></span>
                       <span>Бразилия</span>
                     </label>
                     <label>
-                      <input class="country-filter__input" type="checkbox" name="Ethiopia" value="Ethiopia" checked>
+                      <input class="country-filter__input" type="checkbox" name="country[]" value="Ethiopia" checked>
                       <span class="custom-checkbox"></span>
                       <span>Эфиопия</span>
                     </label>
                     <label>
-                      <input class="country-filter__input" type="checkbox" name="Colombia" value="Colombia">
+                      <input class="country-filter__input" type="checkbox" name="country[]" value="Colombia">
                       <span class="custom-checkbox"></span>
                       <span>Колумбия</span>
                     </label>
                     <label>
-                      <input class="country-filter__input" type="checkbox" name="CostaRica" value="CostaRica">
+                      <input class="country-filter__input" type="checkbox" name="country[]" value="CostaRica">
                       <span class="custom-checkbox"></span>
                       <span>Коста-Рика</span>
                     </label>
                     <label>
-                      <input class="country-filter__input" type="checkbox" name="Peru" value="Peru">
+                      <input class="country-filter__input" type="checkbox" name="country[]" value="Peru">
                       <span class="custom-checkbox"></span>
                       <span>Перу</span>
                     </label>
                     <label>
-                      <input class="country-filter__input" type="checkbox" name="Mexico" value="Mexico">
+                      <input class="country-filter__input" type="checkbox" name="country[]" value="Mexico">
                       <span class="custom-checkbox"></span>
                       <span>Мексика</span>
                     </label>
@@ -487,5 +485,9 @@
         </div>
       </div>
     </footer>
+    <script src="scripts/index.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/nouislider/distribute/nouislider.min.js"></script>
+    <script src="scripts/range-slider.js"></script>
+    <script src="scripts/slider.js"></script>
   </body>
 </html>
