update script for button next and back

--- a/source/index.html
+++ b/source/index.html
@@ -21,8 +21,8 @@
             <a class="header__link" href="#">
               <div class="header__logo logo">
                 <picture class="logo__picture">
-                  <source media="(min-width: 1440px)" srcset="images/logo-desktop.svg" width="70" height="59" type="image/svg+xml">
-                  <source media="(min-width: 768px)" srcset="images/logo-tablet.svg" width="60" height="50" type="image/svg+xml">
+                  <source media="(min-width: 1440px)" srcset="/images/logo-desktop.svg" width="70" height="59" type="image/svg+xml">
+                  <source media="(min-width: 768px)" srcset="/images/logo-tablet.svg" width="60" height="50" type="image/svg+xml">
                   <img class="logo__image" src="images/logo-mobile.svg" width="33" height="38" alt="Логотип Drink2Go">
                 </picture>
                 <span class="logo__label">Интернет-магазин кофейных напитков</span>
@@ -411,8 +411,8 @@
             <div class="footer__wrapper-logo logo">
               <a href="#">
                 <picture class="logo__img">
-                  <source media="(min-width: 768px)" srcset="images/logo-desktop.svg" width="60" height="50" type="image/svg+xml">
-                  <img class="logo__image" src="images/logo-tablet.svg" width="82" height="36" alt="Логотип Drink2Go">
+                  <source media="(min-width: 768px)" srcset="/images/logo-desktop.svg" width="60" height="50" type="image/svg+xml">
+                  <img class="logo__image" src="/images/logo-tablet.svg" width="82" height="36" alt="Логотип Drink2Go">
                 </picture>
                 <span class="logo__label">Интернет-магазин кофейных напитков</span>
               </a>
